# ios-helloworld-cmake

./: CMakeLists.txt  README.md  ipa.plist  local-build.sh
.github/workflows/: push.yml
src/: ContentView.swift  Main.swift
