cmake_minimum_required(VERSION 3.18)

project(ios-ipa-helloworld-cmake LANGUAGES Swift)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)

SET(TARGETSDK iPhoneOS15.0.sdk)
# xcrun --show-sdk-path --sdk iphoneos
SET(CMAKE_OSX_SYSROOT /Applications/Xcode_13.0.0.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/${TARGETSDK})
set(CMAKE_Swift_LANGUAGE_VERSION 5.4)
set(CMAKE_SYSTEM_NAME iOS)
set(CMAKE_SYSTEM_VERSION 15)
set(CMAKE_MACOSX_BUNDLE ON)
set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED "NO")
set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRED "NO")
set(CMAKE_XCODE_ATTRIBUTE_ENABLE_BITCODE "NO")
set(CMAKE_OSX_ARCHITECTURES "arm64")
set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer")

add_executable(${CMAKE_PROJECT_NAME}
    "src/Main.swift"
    "src/ContentView.swift"
)

set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
    XCODE_ATTRIBUTE_CODE_SIGN_ENTITLEMENTS ""
    XCODE_ATTRIBUTE_GCC_OPTIMIZATION_LEVEL "s"
    XCODE_ATTRIBUTE_SWIFT_OPTIMIZATION_LEVEL "-O"
    
    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "project_identifier"
    XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon"
    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
    XCODE_ATTRIBUTE_CURRENT_PROJECT_VERSION "1.0.0"
    XCODE_ATTRIBUTE_MARKETING_VERSION "1.0.0"
    XCODE_ATTRIBUTE_INFOPLIST_FILE  "${CMAKE_CURRENT_SOURCE_DIR}/info.plist"
    XCODE_ATTRIBUTE_SKIP_INSTALL OFF
)

target_sources(${CMAKE_PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/Assets.xcassets")
set_source_files_properties("${CMAKE_CURRENT_BINARY_DIR}/Assets.xcassets" PROPERTIES
    GENERATED true
    MACOSX_PACKAGE_LOCATION Resources
)

target_link_libraries(${CMAKE_PROJECT_NAME}
    "-framework UIKit"
)
    
add_custom_command(TARGET ${CMAKE_PROJECT_NAME} PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/Assets.xcassets" "${CMAKE_CURRENT_BINARY_DIR}/Assets.xcassets"
# COMMAND security unlock-keychain -p \$\(<~/password.txt\) login.keychain-db
# COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/../../html" "$<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/html"
)
